# homework1

./: CMakeLists.txt  README.md  main.c
.github/workflows/: hw1.yml
hw1_lib/: CMakeLists.txt  general.c  general.h  input.c  input.h  types.h  utils.c  utils.h
tests/: CMakeLists.txt  test_timetable.cpp
