cmake_minimum_required(VERSION 3.0.0)
project(hw1_lib)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0 -fsanitize=leak")

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

set(HW1_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(HW1_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
